--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and Release
+name: Build and Save JAR
 
 on: [push]
 
@@ -13,13 +13,8 @@ jobs:
         java-version: 1.8
     - name: Install and build with Maven
       run: mvn install
-    - name: Create release
-      uses: actions/create-release@v1
+    - name: Save JAR as artifact
+      uses: actions/upload-artifact@v1
       with:
-        tag_name: v1.0.0
-        release_name: Release v1.0.0
-        draft: false
-        prerelease: false
-        asset_path: target/myproject.jar
-        asset_name: myproject.jar
-        asset_content_type: application/java-archive
+        name: myproject.jar
+        path: target/myproject.jar
