Started the game states, added most missing commands.

--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.3.0</version>
                 <configuration>
-                    <outputFile>C:\Users\mara_\OneDrive\Escritorio\MPractice\TestServer\plugins\MPE.jar</outputFile>
+                    <outputFile>C:\Users\Ultim\OneDrive\Escritorio\TestServer\Main Server\plugins\MPE.jar</outputFile>
                     <dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml</dependencyReducedPomLocation>
                     <relocations>
                         <relocation>
